--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <div class = "container">
+        <div class = "header"> 
+            <h1>Hello World</h1>
+        </div> 
+        <p>I'm hosted with GitHub Pages.</p>  
+    </div>
+
 </body>
 </html>
