Nav,css & js doc
Adding in a Nav bar as well as the css file and the javascript file

--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
+<head>
+    <meta charset="UTF-8" />
+    <title>JM Portfolio</title>
+    <link rel="stylesheet" href="../style.css">
+    
+</head>
 <body>
-    <div class = "container">
-        <div class = "header"> 
-            <h1>Hello World</h1>
-        </div> 
-        <p>I'm hosted with GitHub Pages.</p>  
-    </div>
+    <script src="../script.js"></script>
+    <div id="sideNav" class="sideNav"> 
+        <a href = "javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href = "#">About</a>
+    </div> 
+    <h2>Game & Software Developer</h2>
+    <p>I am a fourth year college student</p>  
+
 
 </body>
 </html>
