--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <a href = "javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href = "#">About</a>
     </div> 
+    <span style="font-size:30px;cursor:pointer;" onclick="openNav()">&#9776; open</span>
     <h2>Game & Software Developer</h2>
     <p>I am a fourth year college student</p>  
 
