--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <script src="../script.js"></script>
     <div id="sideNav" class="sideNav"> 
-        <a href = "javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href = "script.js" class="closebtn" onclick="closeNav()">&times;</a>
         <a href = "#">About</a>
     </div> 
     <span style="font-size:30px;cursor:pointer;" onclick="openNav()">&#9776; open</span>
