images and text size
added in all images and increased text size for about

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <script src="../script.js"></script>
     <nav>
         <div id="sideNav" class="sideNav"> 
-            <a href = "index.html" class="closebtn" onclick="closeNav()">&times;</a>
+            <a class="closebtn" onclick="closeNav()">&times;</a>
             <a href = "#about">About</a>
-            <a href = "#projects">Portfolio</a>
+            <a href = "#projects">Projects</a>
             <a href = "#contact">Contact</a>    
         </div> 
         
@@ -29,15 +29,23 @@
         <div class="about" id="about">
             <h2 class="topic">About</h2>
             <hr class="line">
-            <p style="display:inline-flex">
+            <p style="display:inline-flex; font-size: 1.25em; "!important>
                 Hey there! I'm thrilled to have you stop by and learn a bit about me. 
-                I'm a current college student pursuing my passion for technology through a major in Computer Science 
-                with a concentration in Software Development.
+                As a computer science major with a concentration in software development, I have honed my skills 
+                at Messiah University. Throughout my academic journey, I've immersed myself in a diverse range of courses, 
+                including data structures & algorithms, database concepts, software engineering, and web development 1 & 2. 
+                This comprehensive education has provided me with a holistic understanding of the field and has instilled 
+                in me a deep appreciation for the power of code. It has also allowed me to be able to howe my abilities in languages
+                such as Python, Java, HTML/CSS/Javascript, PHP, and SQL.<br>
+                However, my college experience hasn't solely revolved around the digital realm. During my freshman and sophomore years, 
+                I had the incredible opportunity to be a part of the college swim team. Being in the water has always been a 
+                significant aspect of my life, and combining my love for swimming with my academic pursuits has been nothing short 
+                of invigorating. The dedication, discipline, and teamwork I honed through competitive swimming have proven invaluable 
+                in both my personal and academic life.
             <img src="../photos/headshot.png" alt="headshot" style="width: 300px; height: 300px; padding-left: 10px;">
             </p>
-             
             <h3 style="margin-bottom: 5px;">Skills</h3>
-            <ul style="margin-top: 0;">
+            <ul style="margin-top: 0; font-size: 1.25em">
                 <li>Java</li>
                 <li>Python</li>
                 <li>HTML5/CSS3/Javascript</li>
@@ -90,13 +98,10 @@
             </ul>
              <div class="row">
                 <div class="column">
-                    <img src="../photos/Screenshot (2).png" style="width: 100%;">
+                    <img src="../photos/Screenshot (6).png" style="width: 100%;">
                 </div>
                 <div class="column">
-                    <img src="../photos/Screenshot (3).png" style="width: 100%;">
-                </div>
-                <div class="column">
-                    <img src="../photos/Screenshot (4).png" style="width: 100%;">
+                    <img src="../photos/Screenshot (7).png" style="width: 100%;">
                 </div>
             </div>
         </div>
@@ -105,7 +110,11 @@
             <h2 class="topic">Contact</h2>
             <hr class="line">
             <p><i class="fa fa-phone fa-fw" style="font-size: 36px; margin-right: 16px;"></i>Phone: 267-374-4492</p>
-            <p><i class="fa fa-envelope fa-fw"style="font-size: 36px; margin-right: 16px;"></i>Email: mcgillenjoseph@gmail.com</p>
+            <p><i class="fa fa-envelope fa-fw" style="font-size: 36px; margin-right: 16px;"></i>Email: mcgillenjoseph@gmail.com</p>
+            <p><i class="fa fa-linkedin fa-fw" style="font-size: 36px; margin-right: 16px;"></i>
+                <a href="https://www.linkedin.com/in/joseph-mcgillen/"style="color: white;">https://www.linkedin.com/in/joseph-mcgillen/</a></p>
+            <p><i class="fa fa-github fa-fw"style="font-size: 36px; margin-right: 16px;"></i>
+                <a href="https://github.com/jm1959" style="color: white;">https://github.com/jm1959</a></p>
         </div>
     </div>
    
